--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,8 +29,8 @@ pylint:
   allow_failure: true
   script:
     - source venv/bin/activate
-    - flake8 --max-line-length=120 vja/*.py || true
-    - pylint -d C0103,C0114,C0115,C0116,C0301 vja/*.py
+    - flake8 --max-line-length=120 $(git ls-files '*.py') || true
+    - pylint -d C0103,C0114,C0115,C0116,C0301 --fail-under=9 $(git ls-files '*.py')
 
 integration-test:
   stage: test
