--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,6 +58,28 @@ integration-test:
     - ./run.sh stop
   cache: { }
 
+deploy:
+  stage: deploy
+  variables:
+    TWINE_NON_INTERACTIVE: "true"
+    TWINE_USERNAME: __token__
+    TWINE_PASSWORD: ${PYPI_VJA_TOKEN}
+  script:
+    - source venv/bin/activate
+    - VERSION=$(vja --version | cut -d ' ' -f 3)
+    - echo "VERSION=$VERSION"
+    - echo "CI_COMMIT_TAG=$CI_COMMIT_TAG"
+    - |
+      if [[ "$VERSION" != *"$CI_COMMIT_TAG" ]]
+      then
+        echo "Version number and git tag do not match!"
+        exit 1
+      fi
+    - ls dist/*
+    - twine upload dist/*
+  only:
+    - tags
+
 #deploy:
 #  stage: deploy
 #  script: echo "Define your deployment script!"
