--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -71,7 +71,7 @@ deploy:
     - echo "VERSION=$VERSION"
     - echo "CI_COMMIT_TAG=$CI_COMMIT_TAG"
     - |
-      if [[ "$VERSION" != *"$CI_COMMIT_TAG" ]]
+      if [[ "$CI_COMMIT_TAG" != *"$VERSION" ]]
       then
         echo "Version number and git tag do not match!"
         exit 1
