--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - "3456:3456"
     environment:
       VIKUNJA_SERVICE_FRONTENDURL: http://localhost:8080/
+      VIKUNJA_RATELIMIT_ENABLED: 0
     entrypoint: >
       /bin/sh -c "
         /app/vikunja/vikunja user create -u test -p test -e test@test.test
