--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -7,16 +7,16 @@ services:
       - "3456:3456"
     environment:
       VIKUNJA_SERVICE_FRONTENDURL: http://localhost:8080/
-      VIKUNJA_RATELIMIT_ENABLED: 0
+      VIKUNJA_RATELIMIT_LIMIT: 10000
     entrypoint: >
       /bin/sh -c "
         /app/vikunja/vikunja user create -u test -p test -e test@test.test
         exec /app/vikunja/vikunja
       "
-#  frontend:
-#    image: vikunja/frontend:0.20.3
-#    ports:
-#      - "8080:80"
-#    environment:
-#      VIKUNJA_API_URL: http://localhost:3456/api/v1
+  frontend:
+    image: vikunja/frontend:0.20.3
+    ports:
+      - "8080:80"
+    environment:
+      VIKUNJA_API_URL: http://localhost:3456/api/v1
 
