feat: show done_at date

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -87,7 +87,7 @@ deploy:
         exit 1
       fi
     - ls -l dist/*
-    - twine upload dist/*
+    - twine upload --verbose dist/*
   only:
     - tags
 
