--- a/.vjacli/vja.rc
+++ b/.vjacli/vja.rc
@@ -1,3 +1,12 @@
 [application]
 frontend_url=https://try.vikunja.io/
 api_url=https://try.vikunja.io/api/v1
+
+[output]
+# This allows to specify custom output formats (i.e. selecting displayed columns).
+# use with --custom-format=tasklist_short to apply your own output format.
+# Be careful: Any code which is entered here gets executed at runtime (python eval()).
+# Do not use --custom-format if you feel uncomfortable with that.
+
+tasklist_long={x.id:5} ({x.priority}) {"*" if x.is_favorite else " "} {x.title:50.50} {x.due_date.strftime("%a %d.%m %H:%M") if x.due_date else "":15.15} {"R" if x.reminder_dates else " "} {x.tasklist.title:20.20} {x.label_titles:20.20} {x.urgency:3}
+ids_only={x.id}
