--- a/tests/.vjatest/vja.rc
+++ b/tests/.vjatest/vja.rc
@@ -6,7 +6,7 @@ api_url=http://localhost:3456/api/v1
 # This allows to specify custom output formats (i.e. selecting displayed columns).
 # use with --custom-format=tasklist_short to apply your own output format.
 # Be careful: Any code which is entered here gets executed at runtime (python eval()).
-# Do not user --custom-format if you feel uncomfortable with that.
+# Do not use --custom-format if you feel uncomfortable with that.
 
 tasklist_long={x.id:5} ({x.priority}) {"*" if x.is_favorite else " "} {x.title:50.50} {x.due_date.strftime("%a %d.%m %H:%M") if x.due_date else "":15.15} {"R" if x.reminder_dates else " "} {x.tasklist.title:20.20} {x.label_titles:20.20} {x.urgency:3}
 tasklist_short={x.id:5} {x.title:50.50}
