--- a/.releaserc
+++ b/.releaserc
@@ -33,7 +33,7 @@
         [
             "@semantic-release/git",
             {
-                "message": "chore: Release ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+                "message": "chore: Release ${nextRelease.version} \n\n${nextRelease.notes}"
             }
         ]
     ]
