--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -88,9 +88,13 @@ integration-test:
 release:
   image: node:lts-slim
   stage: release
+  variables:
+    PYPI_USERNAME: __token__
+    PYPI_TOKEN: ${PYPI_VJA_TOKEN}
   before_script:
-    - apt-get update && apt-get install -y --no-install-recommends git-core ca-certificates
-    - npm install -g semantic-release @semantic-release/gitlab @semantic-release/changelog conventional-changelog-conventionalcommits @semantic-release/commit-analyzer @semantic-release/git
+    - apt-get update && apt-get install -y --no-install-recommends git-core ca-certificates python-is-python3 python3-pip
+    - npm install -g semantic-release @semantic-release/gitlab @semantic-release/changelog conventional-changelog-conventionalcommits @semantic-release/commit-analyzer @semantic-release/git semantic-release-pypi
+    - pip install -r requirements_dev.txt
   script:
     - semantic-release
   cache: { }
