--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,6 @@ stages:
   - build
   - test
   - release
-  - deploy
 
 build:
   stage: build
@@ -26,9 +25,6 @@ build:
     paths:
       - dist/*.whl
   rules:
-    # Exclude semantic-release commits when on $CI_DEFAULT_BRANCH of
-    - if: '$CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH && $CI_COMMIT_MESSAGE =~ /^release: Release/'
-      when: never
     - when: always
 
 pylint:
@@ -39,9 +35,6 @@ pylint:
     - flake8 --max-line-length=120 vja/*.py || true
     - pylint -d C0103,C0114,C0115,C0116,C0301 --fail-under=9 vja/*.py
   rules:
-    # Exclude semantic-release commits when on $CI_DEFAULT_BRANCH of
-    - if: '$CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH && $CI_COMMIT_MESSAGE =~ /^release: Release/'
-      when: never
     - when: on_success
 
 integration-test:
@@ -80,9 +73,6 @@ integration-test:
         coverage_format: cobertura
         path: coverage.xml
   rules:
-    # Exclude semantic-release commits when on $CI_DEFAULT_BRANCH of
-    - if: '$CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH && $CI_COMMIT_MESSAGE =~ /^release: Release/'
-      when: never
     - when: on_success
 
 release:
@@ -96,34 +86,10 @@ release:
     - npm install -g semantic-release @semantic-release/gitlab @semantic-release/changelog conventional-changelog-conventionalcommits @semantic-release/commit-analyzer @semantic-release/git semantic-release-pypi
     - pip install -r requirements_dev.txt
   script:
+    - python --version
     - semantic-release
   cache: { }
   rules:
-    # Exclude semantic-release commits when on $CI_DEFAULT_BRANCH of
-    - if: '$CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH && $CI_COMMIT_MESSAGE =~ /^release: Release/'
-      when: never
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
       when: manual
-
-deploy:
-  stage: deploy
-  variables:
-    TWINE_NON_INTERACTIVE: "true"
-    TWINE_USERNAME: __token__
-    TWINE_PASSWORD: ${PYPI_VJA_TOKEN}
-  script:
-    - source venv/bin/activate
-    - VERSION=$(vja --version | cut -d ' ' -f 3)
-    - echo "VERSION=$VERSION"
-    - echo "CI_COMMIT_TAG=$CI_COMMIT_TAG"
-    - |
-      if [[ "$CI_COMMIT_TAG" != *"$VERSION" ]]
-      then
-        echo "Version number and git tag do not match!"
-        exit 1
-      fi
-    - ls -l dist/*
-    - twine upload --verbose dist/*
-  only:
-    - tags
 
