--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -84,7 +84,7 @@ release:
   before_script:
     - apt-get update && apt-get install -y --no-install-recommends git-core ca-certificates python-is-python3 python3-pip
     - npm install -g semantic-release @semantic-release/gitlab @semantic-release/changelog conventional-changelog-conventionalcommits @semantic-release/commit-analyzer @semantic-release/git semantic-release-pypi
-    - pip install -r requirements_dev.txt
+    - pip install -r requirements_ci.txt
   script:
     - python --version
     - semantic-release
