--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -1,6 +1,6 @@
 # spec: https://semantic-release.gitbook.io/semantic-release/usage/configuration
 tagFormat: "${version}"
-branches: [main, next]
+branches: [ main, next ]
 plugins:
   # Determine the type of release by analyzing commits.
   # ie: Major, Minor or Patch
@@ -14,11 +14,13 @@ plugins:
         - { type: perf, release: patch }
         - { type: docs, release: patch }
         - { type: refactor, release: patch }
-        - { type: style, release: patch }
         - { type: build, release: patch }
-        - { type: ci, release: patch }
         - { type: test, release: patch }
+        - { type: tests, release: patch }
         - { type: update, release: patch }
+        - { type: chore, release: false }
+        - { type: ci, release: false }
+        - { scope: no-release, release: false }
   - - "@semantic-release/release-notes-generator"
     - preset: conventionalcommits
       presetConfig:
@@ -26,12 +28,11 @@ plugins:
           - { type: feat, section: "Features" }
           - { type: new, section: "Features" }
           - { type: fix, section: "Bug Fixes" }
-          - { type: chore, section: "Misc" }
           - { type: doc, section: "Documentation" }
           - { type: docs, section: "Documentation" }
-          - { type: style, section: "Improvements" }
-          - { type: refactor, section: "Improvements" }
-          - { type: perf, section: "Improvements" }
+          - { type: chore, section: "Misc" }
+          - { type: refactor, section: "Misc" }
+          - { type: perf, section: "Misc" }
           - { type: test, section: "Automation" }
           - { type: tests, section: "Automation" }
           - { type: ci, section: "Automation" }
