--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ pylint:
   allow_failure: true
   script:
     - pip install -r requirements_dev.txt
-    - python setup.py sdist bdist_wheel
+    - pip uninstall -y vja && python3 setup.py sdist bdist_wheel && pip install dist/*.whl;
     - flake8 --max-line-length=120 vja/*.py || true
     - pylint -d C0103,C0114,C0115,C0116,C0301 --fail-under=9 vja/*.py
   rules:
@@ -42,9 +42,7 @@ integration-test:
     - python3 --version
 
     - pip install -r requirements_dev.txt
-    - pip uninstall -y vja; python3 setup.py sdist bdist_wheel
-    - pip install dist/*.whl;
-
+    - pip uninstall -y vja && python3 setup.py sdist bdist_wheel && pip install dist/*.whl;
     - pip show vja
     - which vja
 
