--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,5 @@
-image: python:3.11-slim
-
 variables:
   PIP_CACHE_DIR: "$CI_PROJECT_DIR/.cache/pip"
-
 cache:
   paths:
     - .cache/pip
@@ -13,6 +10,7 @@ stages:
 
 pylint:
   stage: test
+  image: python:3.11-slim
   allow_failure: true
   script:
     - pip install -r requirements_dev.txt
@@ -27,7 +25,7 @@ pylint:
 integration-test:
   stage: test
   image:
-    name: docker:20.10.23
+    name: docker:23.0-cli
   services:
     - name: docker:dind
   variables:
