--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -77,4 +77,6 @@ release:
   rules:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
       when: on_success
+    - if: $CI_COMMIT_BRANCH == "beta"
+      when: manual
 
