--- a/tests/.vjatest_dind/vja.rc
+++ b/tests/.vjatest_dind/vja.rc
@@ -8,7 +8,7 @@ api_url=http://docker:3456/api/v1
 # Be careful: Any code which is entered here gets executed at runtime (python eval()).
 # Do not use --custom-format if you feel uncomfortable with that.
 
-tasklist_long={x.id:5} ({x.priority}) {"*" if x.is_favorite else " "} {x.title:50.50} {x.due_date.strftime("%a %d.%m %H:%M") if x.due_date else "":15.15} {"R" if x.reminders else " "} {x.tasklist.title:20.20} {x.label_titles:20.20} {x.urgency:3}
+tasklist_long={x.id:5} ({x.priority}) {"*" if x.is_favorite else " "} {x.title:50.50} {x.due_date.strftime("%a %d.%m %H:%M") if x.due_date else "":15.15} {"R" if x.reminders else " "} {x.project.title:20.20} {x.label_titles:20.20} {x.urgency:3}
 tasklist_short={x.id:5} {x.title:50.50}
 ids_only={x.id}
 
@@ -16,9 +16,9 @@ ids_only={x.id}
 due_date_weight=1.0
 priority_weight=2.0
 favorite_weight=1.0
-list_weight=1.0
+project_weight=1.0
 label_weight=1.0
 
 [urgency_keywords]
-list_keywords=next, test-list
+project_keywords=next, test-project
 label_keywords=next,my_tag
