feat: fetch long_token when logging in (with a ttl of 30 days)

--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -8,6 +8,8 @@ services:
     environment:
       VIKUNJA_SERVICE_FRONTENDURL: http://localhost:8080/
       VIKUNJA_RATELIMIT_LIMIT: 10000
+      #VIKUNJA_LOG_LEVEL: DEBUG
+      #VIKUNJA_LOG_DATABASELEVEL: DEBUG
     entrypoint: >
       /bin/sh -c "
         /app/vikunja/vikunja user create -u test -p test -e test@test.test
@@ -19,4 +21,3 @@ services:
       - "8080:80"
     environment:
       VIKUNJA_API_URL: http://localhost:3456/api/v1
-
