--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,7 +35,7 @@ integration-test:
     DOCKER_TLS_CERTDIR: ""
   script:
     - docker --version
-    - apk add --no-cache bash python3 py3-pip
+    - apk add --no-cache bash curl python3 py3-pip
     - python3 --version
 
     - pip install -r requirements_dev.txt
