ci: trigger on default branch again

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,6 +18,8 @@ pylint:
     - flake8 --max-line-length=120 vja/*.py || true
     - pylint -d C0103,C0114,C0115,C0116,C0301 --fail-under=9 vja/*.py
   rules:
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+      when: on_success
     - if: $CI_COMMIT_BRANCH == "beta"
       when: on_success
     - if: $CI_COMMIT_BRANCH == "rc"
@@ -61,6 +63,8 @@ integration-test:
         coverage_format: cobertura
         path: coverage.xml
   rules:
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+      when: on_success
     - if: $CI_COMMIT_BRANCH == "beta"
       when: on_success
     - if: $CI_COMMIT_BRANCH == "rc"
