--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,15 +18,12 @@ pylint:
     - flake8 --max-line-length=120 vja/*.py || true
     - pylint -d C0103,C0114,C0115,C0116,C0301 --fail-under=9 vja/*.py
   rules:
-    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH || $CI_COMMIT_BRANCH == "beta" || $CI_COMMIT_BRANCH == "rc"
       when: on_success
-    - if: $CI_COMMIT_BRANCH == "beta"
-      when: on_success
-    - if: $CI_COMMIT_BRANCH == "rc"
+    - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
       when: on_success
     - if: $CI_COMMIT_BRANCH && $CI_COMMIT_REF_SLUG !~ /renovate.*/
       when: manual
-    - when: on_success
 
 integration-test:
   stage: test
@@ -63,15 +60,12 @@ integration-test:
         coverage_format: cobertura
         path: coverage.xml
   rules:
-    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH || $CI_COMMIT_BRANCH == "beta" || $CI_COMMIT_BRANCH == "rc"
       when: on_success
-    - if: $CI_COMMIT_BRANCH == "beta"
-      when: on_success
-    - if: $CI_COMMIT_BRANCH == "rc"
+    - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
       when: on_success
     - if: $CI_COMMIT_BRANCH && $CI_COMMIT_REF_SLUG !~ /renovate.*/
       when: manual
-    - when: on_success
 
 release:
   image: node:lts-slim
@@ -86,10 +80,6 @@ release:
     - python --version
     - semantic-release
   rules:
-    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
-      when: manual
-    - if: $CI_COMMIT_BRANCH == "beta"
-      when: manual
-    - if: $CI_COMMIT_BRANCH == "rc"
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH || $CI_COMMIT_BRANCH == "beta" || $CI_COMMIT_BRANCH == "rc"
       when: manual
 
