--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -75,7 +75,7 @@ release:
     PYPI_TOKEN: ${PYPI_VJA_TOKEN}
   before_script:
     - apt-get update && apt-get install -y --no-install-recommends git-core ca-certificates python-is-python3 python3-pip twine
-    - npm install -g semantic-release @semantic-release/gitlab @semantic-release/changelog conventional-changelog-conventionalcommits @semantic-release/commit-analyzer @semantic-release/git semantic-release-pypi
+    - npm install -g semantic-release @semantic-release/gitlab @semantic-release/changelog conventional-changelog-conventionalcommits@6 @semantic-release/commit-analyzer @semantic-release/git semantic-release-pypi
   script:
     - python --version
     - semantic-release
