--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,8 @@ pylint:
   image: python:3.12-slim
   allow_failure: true
   script:
+    - python3 -m venv ./venv
+    - . ./venv/bin/activate
     - pip install -r requirements_dev.txt
     - pip uninstall -y vja && python3 setup.py sdist bdist_wheel && pip install dist/*.whl
     - flake8 --max-line-length=120 vja/*.py || true
@@ -39,6 +41,8 @@ integration-test:
     - apk add --no-cache bash curl python3 py3-pip
     - python3 --version
 
+    - python3 -m venv ./venv
+    - . ./venv/bin/activate
     - pip install -r requirements_dev.txt
     - pip uninstall -y vja && python3 setup.py sdist bdist_wheel && pip install dist/*.whl
     - pip show vja
