--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,9 +30,9 @@ pylint:
 integration-test:
   stage: test
   image:
-    name: docker:cli
+    name: docker:24.0.6-cli
   services:
-    - name: docker:dind
+    - name: docker:24.0.6-dind
   variables:
     DOCKER_DRIVER: overlay2
     DOCKER_TLS_CERTDIR: ""
