--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,8 +13,8 @@ pylint:
   image: python:3.12-slim
   allow_failure: true
   script:
-    - python3 -m venv ./venv
-    - . ./venv/bin/activate
+    # - python3 -m venv ./venv
+    # - . ./venv/bin/activate
     - pip install -r requirements_dev.txt
     - pip uninstall -y vja && python3 setup.py sdist bdist_wheel && pip install dist/*.whl
     - flake8 --max-line-length=120 vja/*.py || true
@@ -30,9 +30,9 @@ pylint:
 integration-test:
   stage: test
   image:
-    name: docker:24.0.6-cli
+    name: docker:cli
   services:
-    - name: docker:24.0.6-dind
+    - name: docker:dind
   variables:
     DOCKER_DRIVER: overlay2
     DOCKER_TLS_CERTDIR: ""
