--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,10 +13,10 @@ pylint:
   image: python:3.12-slim
   allow_failure: true
   script:
-    # - python3 -m venv ./venv
-    # - . ./venv/bin/activate
-    - pip install -r requirements_dev.txt
-    - pip uninstall -y vja && python3 setup.py sdist bdist_wheel && pip install dist/*.whl
+    - python3 -m venv ./venv
+    - . ./venv/bin/activate
+    - python3 -m pip install -r requirements_dev.txt
+    - pip uninstall -y vja ; python3 setup.py sdist bdist_wheel && pip install dist/*.whl
     - flake8 --max-line-length=120 vja/*.py || true
     - pylint -d C0103,C0114,C0115,C0116,C0301 --fail-under=9 vja/*.py
   rules:
@@ -43,8 +43,8 @@ integration-test:
 
     - python3 -m venv ./venv
     - . ./venv/bin/activate
-    - pip install -r requirements_dev.txt
-    - pip uninstall -y vja && python3 setup.py sdist bdist_wheel && pip install dist/*.whl
+    - python3 -m pip install -r requirements_dev.txt
+    - pip uninstall -y vja ; python3 setup.py sdist bdist_wheel && pip install dist/*.whl
     - pip show vja
     - which vja
 
