--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,8 @@
-variables:
-  PIP_CACHE_DIR: "$CI_PROJECT_DIR/.cache/pip"
-cache:
-  paths:
-    - .cache/pip
+#variables:
+#  PIP_CACHE_DIR: "$CI_PROJECT_DIR/.cache/pip"
+#cache:
+#  paths:
+#    - .cache/pip
 
 stages:
   - test
@@ -16,7 +16,9 @@ pylint:
     - python3 -m venv ./venv
     - . ./venv/bin/activate
     - python3 -m pip install -r requirements_dev.txt
-    - python3 -m pip install vja
+    - python3 -m pip install .
+    - vja --version
+
     - flake8 --max-line-length=120 vja/*.py || true
     - pylint -d C0103,C0114,C0115,C0116,C0301 --fail-under=9 vja/*.py
   rules:
@@ -44,7 +46,8 @@ integration-test:
     - python3 -m venv ./venv
     - . ./venv/bin/activate
     - python3 -m pip install -r requirements_dev.txt
-    - python3 -m pip install vja
+    - python3 -m pip install .
+    - vja --version
 
     - docker compose -f tests/docker-compose.yml up -d api
     - curl --retry 5 --retry-all-errors --retry-delay 1 "http://docker:3456/api/v1/info"
