--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -1,12 +1,12 @@
 version: '3'
 
 services:
-  api:
-    image: vikunja/api:latest
+  vikunja:
+    image: vikunja/vikunja:latest
     ports:
       - "3456:3456"
     environment:
-      VIKUNJA_SERVICE_FRONTENDURL: http://localhost:8080/
+      VIKUNJA_SERVICE_PUBLICURL: http://localhost:3456/
       VIKUNJA_RATELIMIT_LIMIT: 10000
       #VIKUNJA_LOG_LEVEL: DEBUG
       #VIKUNJA_LOG_DATABASELEVEL: DEBUG
@@ -15,9 +15,3 @@ services:
         /app/vikunja/vikunja user create -u test -p test -e test@test.test
         exec /app/vikunja/vikunja
       "
-  frontend:
-    image: vikunja/frontend:latest
-    ports:
-      - "8080:80"
-    environment:
-      VIKUNJA_API_URL: http://localhost:3456/api/v1
