ci: create required folders and init user in sep. container

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,7 +49,10 @@ integration-test:
     - python3 -m pip install .
     - vja --version
 
+    - mkdir $PWD/files $PWD/db
+    - chmod a+w $PWD/files $PWD/db
     - docker compose -f tests/docker-compose.yml up -d
+    - sleep 2s
     - curl --retry 5 --retry-all-errors --retry-delay 1 "http://docker:3456/api/v1/info"
 
     - export VJA_CONFIGDIR=tests/.vjatest_dind
