--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -11,16 +11,15 @@ plugins:
         - { breaking: true, release: major }
         - { revert: true, release: patch }
         - { type: feat, release: minor }
+        - { type: ci, release: patch }
+        - { type: doc, release: patch }
+        - { type: docs, release: patch }
         - { type: fix, release: patch }
         - { type: perf, release: patch }
-        - { type: docs, release: patch }
         - { type: refactor, release: patch }
-        - { type: build, release: patch }
         - { type: test, release: patch }
         - { type: tests, release: patch }
-        - { type: update, release: patch }
         - { type: chore, release: false }
-        - { type: ci, release: false }
         - { scope: no-release, release: false }
   - - "@semantic-release/release-notes-generator"
     - preset: conventionalcommits
@@ -32,12 +31,11 @@ plugins:
           - { type: doc, section: "Documentation" }
           - { type: docs, section: "Documentation" }
           - { type: chore, section: "Misc" }
-          - { type: refactor, section: "Misc" }
           - { type: perf, section: "Misc" }
+          - { type: refactor, section: "Misc" }
+          - { type: ci, section: "Automation" }
           - { type: test, section: "Automation" }
           - { type: tests, section: "Automation" }
-          - { type: ci, section: "Automation" }
-          - { type: CI, section: "Automation" }
   - "@semantic-release/changelog"
   - "@semantic-release/gitlab"
   - "semantic-release-pypi"
